*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===
* Added support of integrated loudness metering.
* Reverted waveform rendering issues.

=== 1.0.3 ===
* Updated waveform graph rendering.
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Fixed typos.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
